src/snapshots/lazier__app__tests__branch_prompt.snap
---
source: src/app.rs
expression: "draw(&app, 80, 24).backend()"
---
"┌[1]─Status────────────────┐┌[0]─Diff──────────────────────────────────────────┐"
"│main ↑2                   ││diff --git a/src/main.rs b/src/main.rs            │"
"└────────────────────1 of 1┘│+added line                                       │"
"┌[2]─Files─────────────────┃│-removed line                                     │"
"│ ? notes.txt              ┃│                                                  │"
"│  ▾ src/                  ┃│                                                  │"
"│ A   app.rs               ││                                                  │"
"└────────────────────1 of 4┘│                                                  │"
"┌[3]─Branches──────────────┐│                                                  │"
"│  2h * main ↑2            ││                                                  │"
"│  1d   feature/ui ↑1 ↓3   ││                                                  │"
"│  3w   old/thing          ││                                                  │"
"└────────────────────1 of 3┘│                                                  │"
"┌[4]─Commits───────────────┃│                                                  │"
"│0a0c000 TA ●↑ fake: commit│└──────────────────────────────────────────────────┘"
"│0a0c001 TA ◉─╮↑ fake: comm│┌[@]─Command log───────────────────────────────────┐"
"│0a0c002 TA ● │ fake: commi││                                                  │"
"└───────────────1 of 100000┘│                                                  │"
"┌[5]─Stash─────────────────┐│                                                  │"
"│stash@{0}: WIP on main    ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└────────────────────1 of 1┘└──────────────────────────────────────────────────┘"
"new branch name: feature/x▏                                                     "
