src/snapshots/lazier__app__tests__commit_prompt.snap
---
source: src/app.rs
expression: "draw(&app, 80, 24).backend()"
---
"┌[1] Status────────────────┐┌[0] Diff──────────────────────────────────────────┐"
"│main ↑2                   ││diff --git a/src/main.rs b/src/main.rs            │"
"└──────────────────────────┘│+added line                                       │"
"┌[2] Files─────────────────┐│-removed line                                     │"
"│ ? notes.txt              ││                                                  │"
"│  ▾ src/                  ││                                                  │"
"│ A   app.rs               ││                                                  │"
"└──────────────────────────┘│                                                  │"
"┌[3] Branches──────────────┐│                                                  │"
"│  feature/ui              ││                                                  │"
"│* main                    ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘│                                                  │"
"┌[4] Commits───────────────┐│                                                  │"
"│● ↑ 0a0c000 fake: commit s│└──────────────────────────────────────────────────┘"
"│◉─╮ ↑ 0a0c001 fake: commit│┌[@] Command log───────────────────────────────────┐"
"│● │  0a0c002 fake: commit ││                                                  │"
"└──────────────────────────┘│                                                  │"
"┌[5] Stash─────────────────┐│                                                  │"
"│stash@{0}: WIP on main    ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"commit message: feat: x▏                                                        "
