src/snapshots/lazier__app__tests__commit_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1] Status───────────────────────┐┌[0] Diff───────────────────────────────────────────────────────┐"
"│main ↑2                          ││diff --git a/src/main.rs b/src/main.rs                         │"
"└─────────────────────────────────┘│+added line                                                    │"
"┌[2] Files────────────────────────┐│-removed line                                                  │"
"│ ? notes.txt                     ││                                                               │"
"│  ▾ src/                         ││                                                               │"
"│ A   app.rs                      ││                                                               │"
"│SM   main.rs ┌ Commit ──────────────────────────────────────────────────────────────┐             │"
"│             │┌summary─────────────────────────────────────────────────────────────┐│             │"
"└─────────────││feat: add the commit window                                         ││             │"
"┌[3] Branches─│└────────────────────────────────────────────────────────────────────┘│             │"
"│● main ↑2    │┌body (optional)─────────────────────────────────────────────────────┐│             │"
"│  feature/ui ││The window has a summary line and a body.▏                          ││             │"
"│  old/thing  ││                                                                    ││             │"
"│             ││                                                                    ││             │"
"└─────────────││                                                                    ││             │"
"┌[4] Commits──││                                                                    ││             │"
"│● ↑ 0a0c000 f││                                                                    ││             │"
"│◉─╮ ↑ 0a0c001│└────────────────────────────────────────────────────────────────────┘│             │"
"│● │  0a0c002 │enter new line · tab summary · esc cancel                             │             │"
"││ ●  0a0c003 └──────────────────────────────────────────────────────────────────────┘─────────────┘"
"│●─╯  0a0c004 fake: commit subject│┌[@] Command log────────────────────────────────────────────────┐"
"└─────────────────────────────────┘│                                                               │"
"┌[5] Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└─────────────────────────────────┘└───────────────────────────────────────────────────────────────┘"
"                                                                                                    "
