src/snapshots/lazier__app__tests__commits_panel_scrolled_deep.snap
---
source: src/app.rs
expression: "draw(&app, 80, 24).backend()"
---
"┌[1]─Status────────────────┐┌[0]─Commit────────────────────────────────────────┐"
"│main ↑2                   ││── Unstaged changes ──────────────────────────────│"
"└────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs            │"
"┌[2]─Files─────────────────┃│+added line                                       │"
"│   ▾ /                    ┃│-removed line                                     │"
"│ ?   notes.txt            ┃│── Staged changes ────────────────────────────────│"
"│     ▾ src/               ││diff --git a/src/main.rs b/src/main.rs            │"
"└────────────────────1 of 5┘│+staged line                                      │"
"┌[3]─Branches──────────────┐│                                                  │"
"│  2h * main ↑2            ││                                                  │"
"│  1d   feature/ui ↑1 ↓3   ││                                                  │"
"│  3w   old/thing          ││                                                  │"
"└────────────────────1 of 3┘│                                                  │"
"┌[4]─Commits───────────────┐│                                                  │"
"│0a2469d TA ● │ fake: commi││                                                  │"
"│0a2469e TA │ ● fake: commi││                                                  │"
"│0a2469f TA ●─╯ fake: commi│└──────────────────────────────────────────────────┘"
"└──────────100000 of 100000┃┌[@]─Command log───────────────────────────────────┐"
"┌[5]─Stash─────────────────┐│                                                  │"
"│stash@{0}: WIP on main    ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└────────────────────1 of 1┘└──────────────────────────────────────────────────┘"
"Graph: <enter> | Rebase: i | Reword: w | Revert: v | Cherry-pick: y | Keys: ? … "
