src/snapshots/lazier__app__tests__help_overlay.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1] Status───────┌ Keys ────────────────────────────────────────────────────────┐─────────────────┐"
"│main ↑2          │ Global                                                       │                 │"
"└─────────────────│  tab / shift-tab  cycle the panes                            │                 │"
"┌[2] Files────────│        1 2 3 4 5  go to a panel                              │                 │"
"│ ? notes.txt     │                0  go to the diff pane                        │                 │"
"│  ▾ src/         │            j / k  move the selection                         │                 │"
"│ A   app.rs      │  ctrl-d / ctrl-u  move one page                              │                 │"
"│SM   main.rs     │            g / G  go to the top or the end                   │                 │"
"│                 │            J / K  scroll the diff pane                       │                 │"
"└─────────────────│                r  read the repository again                  │                 │"
"┌[3] Branches─────│        ? / @ / q  help, command log, quit                    │                 │"
"│● main ↑2        │──────────────────────────────────────────────────────────────│                 │"
"│  feature/ui ↑1 ↓│ Files [2]                                                    │                 │"
"│  old/thing      │            space  stage or unstage the file or the directory │                 │"
"│                 │                a  stage all files                            │                 │"
"└─────────────────│            enter  open the hunks, or fold the directory      │                 │"
"┌[4] Commits──────│            c / C  open the commit window, or use the editor  │                 │"
"│● ↑ 0a0c000 fake:│                s  put the changes in a stash                 │                 │"
"│◉─╮ ↑ 0a0c001 fak│            o / t  take ours or theirs in a conflict          │                 │"
"│● │  0a0c002 fake│──────────────────────────────────────────────────────────────│                 │"
"││ ●  0a0c003 fake│ Branches [3]                                                 │─────────────────┘"
"│●─╯  0a0c004 fake│            enter  check out the branch                       │─────────────────┐"
"└─────────────────│                n  make a new branch                          │                 │"
"┌[5] Stash────────│            d / D  delete it, or delete it by force           │                 │"
"│stash@{0}: WIP on│                R  give the branch a new name                 │                 │"
"│                 │                m  merge the branch into the current one      │                 │"
"│                 │        P / p / f  push, pull, or fetch                       │                 │"
"│                 │            ● ↑ ↓  current branch, to push, to pull           │                 │"
"└─────────────────└──────────────────────────────────────────────────────────────┘─────────────────┘"
"press any key to close the help                                                                     "
