src/snapshots/lazier__app__tests__hunk_view_marks_lines.snap
---
source: src/app.rs
expression: "draw(&app, 100, 24).backend()"
---
"┌[1]─Status───────────────────────┐┌Hunk 1/1 — src/app.rs──────────────────────────────────────────┐"
"│main (no upstream) ↑2            ││  keep                                                         │"
"└───────────────────────────1 of 1┘│▌-old line                                                     │"
"┌[2]─Files────────────────────────┃│ +new line                                                     │"
"│   ▾ /                           ┃│                                                               │"
"│ ?   notes.txt                   ┃│                                                               │"
"│     ▾ src/                      ││                                                               │"
"└───────────────────────────1 of 5┘│                                                               │"
"┌[3]─Branches─────────────────────┐│                                                               │"
"│  2h * main ↑2                   ││                                                               │"
"│  1d   feature/ui ↑1 ↓3          ││                                                               │"
"│  3w   old/thing                 ││                                                               │"
"└───────────────────────────1 of 3┘│                                                               │"
"┌[4]─Commits──────────────────────┃│                                                               │"
"│0a0c000 TA ●↑ fake: commit subjec││                                                               │"
"│0a0c001 TA ◉─╮↑ fake: commit subj││                                                               │"
"│0a0c002 TA ● │ fake: commit subje│└─────────────────────────────────────────────────────────2 of 3┘"
"└──────────────────────1 of 100000┘┌[@]─Command log────────────────────────────────────────────────┐"
"┌[5]─Stash────────────────────────┐│                                                               │"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"1 marked  Mark line: <space> | Stage marked: <enter> | Stage hunk: a | Hunk: J/K | Back: <esc>      "
