src/snapshots/lazier__app__tests__ignore_window.snap
---
source: src/app.rs
expression: "draw(&app, 100, 30).backend()"
---
"┌[1]─Status───────────────────────┐┌[0]─Changes────────────────────────────────────────────────────┐"
"│main (no upstream) ↑2            ││── Unstaged changes ───────────────────────────────────────────│"
"└───────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                         │"
"┌[2]─Files────────────────────────┐│+added line                                                    │"
"│    ▾ /                          ││-removed line                                                  │"
"│  ?   notes.txt                  ││── Staged changes ─────────────────────────────────────────────│"
"│      ▾ src/                     ││diff --git a/src/main.rs b/src/main.rs                         │"
"│  A     app.rs                   ││+staged line                                                   │"
"│ MM     main.rs                  ││                                                               │"
"└───────────────────────────1 of 5┘│                                                               │"
"┌[3]─Branches─────────────────────┐│                                                               │"
"│  2h * main ↑2  ┌ Ignore ────────────────────────────────────────────────────────┐                │"
"│  1d   feature/u│ /notes.txt                                                     │                │"
"│  3w   old/thing│                                                                │                │"
"│                │ i  .gitignore    every person who clones the repository        │                │"
"└────────────────│ e  info/exclude  only you                                      │                │"
"┌[4]─Commits─────└────────────────────────────────────────────────────────────────┘                │"
"│0a0c000 TA ●↑ fake: commit subjec││                                                               │"
"│0a0c001 TA ◉─╮↑ fake: commit subj││                                                               │"
"│0a0c002 TA ● │ fake: commit subje││                                                               │"
"│0a0c003 TA │ ● fake: commit subje││                                                               │"
"│0a0c004 TA ●─╯ fake: commit subje││                                                               │"
"└──────────────────────1 of 100000┘└───────────────────────────────────────────────────────────────┘"
"┌[5]─Stash────────────────────────┐┌[@]─Command log────────────────────────────────────────────────┐"
"│stash@{0}: WIP on main           ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"│                                 ││                                                               │"
"└───────────────────────────1 of 1┘└───────────────────────────────────────────────────────────────┘"
"Share the rule: i | Keep it to yourself: e | Cancel: <esc>                                          "
