src/snapshots/lazier__app__tests__layout_200x50.snap
---
source: src/app.rs
expression: "draw(&demo(), 200, 50).backend()"
---
"┌[1]─Status──────────────────────────────────────────────────────────┐┌[0]─Changes─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│main (no upstream) ↑2                                               ││── Unstaged changes ────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"└──────────────────────────────────────────────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs                                                                                          │"
"┌[2]─Files───────────────────────────────────────────────────────────┐│+added line                                                                                                                     │"
"│    ▾ /                                                             ││-removed line                                                                                                                   │"
"│  ?   notes.txt                                                     ││── Staged changes ──────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│      ▾ src/                                                        ││diff --git a/src/main.rs b/src/main.rs                                                                                          │"
"│  A     app.rs                                                      ││+staged line                                                                                                                    │"
"│ MM     main.rs                                                     ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"└──────────────────────────────────────────────────────────────1 of 5┘│                                                                                                                                │"
"┌[3]─Branches────────────────────────────────────────────────────────┐│                                                                                                                                │"
"│  2h * main ↑2                                                      ││                                                                                                                                │"
"│  1d   feature/ui ↑1 ↓3                                             ││                                                                                                                                │"
"│  3w   old/thing                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"└──────────────────────────────────────────────────────────────1 of 3┘│                                                                                                                                │"
"┌[4]─Commits─────────────────────────────────────────────────────────┃│                                                                                                                                │"
"│0a0c000 TA ●↑ fake: commit subject #0                               ││                                                                                                                                │"
"│0a0c001 TA ◉─╮↑ fake: commit subject #1                             ││                                                                                                                                │"
"│0a0c002 TA ● │ fake: commit subject #2                              ││                                                                                                                                │"
"│0a0c003 TA │ ● fake: commit subject #3                              ││                                                                                                                                │"
"│0a0c004 TA ●─╯ fake: commit subject #4                              ││                                                                                                                                │"
"│0a0c005 TA ● fake: commit subject #5                                ││                                                                                                                                │"
"│0a0c006 TA ◉─╮ fake: commit subject #6                              ││                                                                                                                                │"
"│0a0c007 TA ● │ fake: commit subject #7                              ││                                                                                                                                │"
"│0a0c008 TA │ ● fake: commit subject #8                              ││                                                                                                                                │"
"│0a0c009 TA ●─╯ fake: commit subject #9                              │└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"└─────────────────────────────────────────────────────────1 of 100000┘┌[@]─Command log─────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"┌[5]─Stash───────────────────────────────────────────────────────────┐│                                                                                                                                │"
"│stash@{0}: WIP on main                                              ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"│                                                                    ││                                                                                                                                │"
"└──────────────────────────────────────────────────────────────1 of 1┘└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Stage: <space> | Stage all: a | Commit: c | Discard: d | Delete: x | Ignore: i | Stash: s | Hunks: <enter> | Open it: e | Ours/theirs: o/t | Push: P | Pull: p | Fetch: f | Search: / | Shell: : …      "
