src/snapshots/lazier__app__tests__layout_80x24.snap
---
source: src/app.rs
expression: "draw(&demo(), 80, 24).backend()"
---
"┌[1]─Status────────────────┐┌[0]─Changes───────────────────────────────────────┐"
"│main (no upstream) ↑2     ││── Unstaged changes ──────────────────────────────│"
"└────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs            │"
"┌[2]─Files─────────────────┃│+added line                                       │"
"│    ▾ /                   ┃│-removed line                                     │"
"│  ?   notes.txt           ┃│── Staged changes ────────────────────────────────│"
"│      ▾ src/              ││diff --git a/src/main.rs b/src/main.rs            │"
"└────────────────────1 of 5┘│+staged line                                      │"
"┌[3]─Branches──────────────┐│                                                  │"
"│  2h * main ↑2            ││                                                  │"
"│  1d   feature/ui ↑1 ↓3   ││                                                  │"
"│  3w   old/thing          ││                                                  │"
"└────────────────────1 of 3┘│                                                  │"
"┌[4]─Commits───────────────┃│                                                  │"
"│0a0c000 TA ●↑ fake: commit││                                                  │"
"│0a0c001 TA ◉─╮↑ fake: comm││                                                  │"
"│0a0c002 TA ● │ fake: commi│└──────────────────────────────────────────────────┘"
"└───────────────1 of 100000┘┌[@]─Command log───────────────────────────────────┐"
"┌[5]─Stash─────────────────┐│                                                  │"
"│stash@{0}: WIP on main    ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└────────────────────1 of 1┘└──────────────────────────────────────────────────┘"
"Stage: <space> | Stage all: a | Commit: c | Discard: d | Delete: x | Ignore: i …"
