src/snapshots/lazier__app__tests__long_branch_names_keep_their_counts.snap
---
source: src/app.rs
expression: "draw(&app, 80, 24).backend()"
---
"┌[1]─Status────────────────┐┌[0]─Changes───────────────────────────────────────┐"
"│main (no upstream) ↑2     ││── Unstaged changes ──────────────────────────────│"
"└────────────────────1 of 1┘│diff --git a/src/main.rs b/src/main.rs            │"
"┌[2]─Files─────────────────┃│+added line                                       │"
"│    ▾ /                   ┃│-removed line                                     │"
"│  ?   notes.txt           ┃│── Staged changes ────────────────────────────────│"
"│      ▾ src/              ││diff --git a/src/main.rs b/src/main.rs            │"
"└────────────────────1 of 5┘│+staged line                                      │"
"┌[3]─Branches──────────────┐│                                                  │"
"│  2d * max/macro-wareh… ↑5││                                                  │"
"│  2d   max/pratt-p… ↑12 ↓3││                                                  │"
"│  2d   main               ││                                                  │"
"└────────────────────1 of 3┘│                                                  │"
"┌[4]─Commits───────────────┃│                                                  │"
"│0a0c000 TA ●↑ fake: commit││                                                  │"
"│0a0c001 TA ◉─╮↑ fake: comm│└──────────────────────────────────────────────────┘"
"│0a0c002 TA ● │ fake: commi│┌[@]─Command log───────────────────────────────────┐"
"└───────────────1 of 100000┘│                                                  │"
"┌[5]─Stash─────────────────┐│                                                  │"
"│stash@{0}: WIP on main    ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└────────────────────1 of 1┘└──────────────────────────────────────────────────┘"
"Checkout: <enter> | New: n | Force push: F | Delete: d/D | Rename: R …          "
